--- a/2_lecture/src/Person/Person.css
+++ b/2_lecture/src/Person/Person.css
@@ -1,3 +1,11 @@
 body{
     color: brown;
 }
+
+.card{
+    color: burlywood;
+    width: 20rem;
+    height: 20rem;
+    margin: 2px;
+    background-color: brown;
+}
