--- a/3_lecture/src/App.css
+++ b/3_lecture/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
+body{
+  background: black;
+  color: chocolate;
+ 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  border-radius: 50px;
+  width: 20rem;
+  height: 20rem;
+  padding: 2rem;
+  margin: 1rem;
+  background: darkcyan;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttons{
+  width: 7rem;
+  height: 5rem;
+  border: none;
+  background-color: coral;
+  border-radius: 5px;
+  margin: 1rem;
 }
