styles and screenshot

--- a/3_lecture/src/Footer/Footer.css
+++ b/3_lecture/src/Footer/Footer.css
@@ -1,5 +1,11 @@
 footer{
-    background: chocolate;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: grey;
     color: black;
     height: 5rem;
 }
