--- a/3_lecture/src/App.css
+++ b/3_lecture/src/App.css
@@ -1,7 +1,9 @@
 body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   background: black;
   color: chocolate;
- 
 }
 
 .card{
@@ -17,10 +19,36 @@ body{
 }
 
 .buttons{
-  width: 7rem;
+  display: inline-flex;
+  justify-content: center;
+  font-size: 1rem;
+  width: 8rem;
   height: 5rem;
   border: none;
   background-color: coral;
-  border-radius: 5px;
+  border-radius: 8px;
   margin: 1rem;
+  text-transform: uppercase;
+  cursor: pointer;
+ 
+}
+
+.calculator_wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.buttons_wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
 }
