--- a/3_lecture/src/Header/Header.css
+++ b/3_lecture/src/Header/Header.css
@@ -1,5 +1,35 @@
 header {
-    color: coral;
-    height: 5rem;
-    
+    background-color: grey;
+    color: black;
+    height: 8rem;
+    display: flex;
+    justify-content: space-between;
+    justify-items: center;
+    align-items: center;
+    width: 100%;
+}
+
+.logo{
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+h1{
+    padding: 0;
+    margin: 0;
+    text-transform: uppercase;
+}
+
+.date{
+    margin: 0;
+    padding: 1rem;
+    font-size: larger;
+    font-weight: bolder;
+}
+
+.thumbs{
+    color: hotpink;
 }
