--- a/3_lecture/src/App.css
+++ b/3_lecture/src/App.css
@@ -19,9 +19,10 @@ body{
 }
 
 .buttons{
-  display: inline-flex;
+  display: flex;
   justify-content: center;
-  font-size: 1rem;
+  align-items: center;
+  font-size: 1.5rem;
   width: 8rem;
   height: 5rem;
   border: none;
