--- a/speed-test/src/App.css
+++ b/speed-test/src/App.css
@@ -4,7 +4,7 @@ body {
 	height: 100vh;
 	font-family: "Exo", sans-serif;
 	color: #fff;
-	background: linear-gradient(-180deg, #52ee81, #abe73c, #23a6d5, #23d5ab );
+	background: linear-gradient(-90deg, #52ee81, #abe73c, #23a6d5, #23d5ab );
 	background-size: 400% 400%;
 	-webkit-animation: gradientBG 150s ease infinite;
 	        animation: gradientBG 150s ease infinite;
@@ -46,10 +46,18 @@ a {
 }
 
 button{
+  
   width: 10rem;
   height: 5rem;
   border-radius: 5px;
-  box-shadow: none;
   border: none;
   margin: 2rem;
+  background-color: rgba(57, 19, 163, 0.308);
+  transition: background-color ease-in-out 400ms;
+}
+
+button:hover{
+  box-shadow: 0 0 3px 1px black;
+  background-color: rgba(57, 19, 163, 0.678);
+
 }
