--- a/speed-test/src/Circle/Circle.css
+++ b/speed-test/src/Circle/Circle.css
@@ -1,8 +1,13 @@
 .circles{
     display: inline-block;
     border-radius: 50%;
-    background-color: rgb(255, 0, 0);
     width: 10rem;
     height: 10rem;
     margin: 10px;
+
+}
+
+.circles.active {
+    box-shadow: inset 0 0 5px rgb(0, 0, 0);
+    background-color: blueviolet;
 }
