--- a/speed-test/src/Circle/Circle.css
+++ b/speed-test/src/Circle/Circle.css
@@ -4,10 +4,15 @@
     width: 10rem;
     height: 10rem;
     margin: 10px;
+    
+}
 
+.circles:hover {
+    box-shadow: 0 0 3px black
 }
 
 .circles.active {
-    box-shadow: inset 0 0 5px rgb(0, 0, 0);
-    background-color: blueviolet;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.513);
+    background: url("https://source.unsplash.com/Sss9uGhSiPw/800x600")center center/cover;
 }
+
